--- a/directbak.yaml
+++ b/directbak.yaml
@@ -116,6 +116,7 @@ payload:
   - '+.0208.com'
   - '+.020banjia.net'
   - '+.020job.com'
+  - '+.020xinwen.com'
   - '+.020ym.com'
   - '+.020zp.net'
   - '+.021-atp.com'
@@ -146,7 +147,6 @@ payload:
   - '+.021sports.com'
   - '+.021tk.com'
   - '+.021yongzhuo.com'
-  - '+.021zu.com'
   - '+.022003.com'
   - '+.0221155.com'
   - '+.022ee.com'
@@ -1008,9 +1008,6 @@ payload:
   - '+.121mai0098.com'
   - '+.121mu.com'
   - '+.121xia.com'
-  - '+.12225.com'
-  - '+.12226.com'
-  - '+.12227.com'
   - '+.122cha.com'
   - '+.122law.com'
   - '+.122park.com'
@@ -1219,7 +1216,6 @@ payload:
   - '+.140ed8.com'
   - '+.1415926.com'
   - '+.1415926.mobi'
-  - '+.1415926pi.com'
   - '+.14294.com'
   - '+.14498.com'
   - '+.1451cn.com'
@@ -3449,6 +3445,7 @@ payload:
   - '+.45xie.com'
   - '+.462546.com'
   - '+.46412.com'
+  - '+.46466.me'
   - '+.4658.net'
   - '+.466.com'
   - '+.4662000.com'
@@ -3576,6 +3573,7 @@ payload:
   - '+.505gg.com'
   - '+.505uu.com'
   - '+.5064.tw'
+  - '+.5066.com'
   - '+.5066.net'
   - '+.5068.com'
   - '+.5068yx.com'
@@ -4457,7 +4455,6 @@ payload:
   - '+.52xp.net'
   - '+.52xyz.com'
   - '+.52yawa.com'
-  - '+.52yesu.com'
   - '+.52yh.com'
   - '+.52yifei.com'
   - '+.52ykjob.com'
@@ -4530,7 +4527,6 @@ payload:
   - '+.54doctors.net'
   - '+.54hcz.com'
   - '+.54heb.com'
-  - '+.54hei.com'
   - '+.54im.com'
   - '+.54jj.com'
   - '+.54jkw.com'
@@ -6138,7 +6134,6 @@ payload:
   - '+.8866.org'
   - '+.886966.com'
   - '+.886abc.com'
-  - '+.886bl.com'
   - '+.886vps.com'
   - '+.88765.com'
   - '+.887w.com'
@@ -6767,7 +6762,6 @@ payload:
   - '+.96lh.net'
   - '+.96lou.com'
   - '+.96ni.net'
-  - '+.96pc.com'
   - '+.96sdk.com'
   - '+.96sir.com'
   - '+.96weixin.com'
@@ -8549,7 +8543,6 @@ payload:
   - '+.anquanquan.info'
   - '+.anquantong.com'
   - '+.anquanxia.com'
-  - '+.anquanzhuomian.com'
   - '+.anrayer.com'
   - '+.anren.org'
   - '+.anrenmind.com'
@@ -11670,6 +11663,7 @@ payload:
   - '+.bsccdn.net'
   - '+.bscdns.com'
   - '+.bscea.org'
+  - '+.bscedge.com'
   - '+.bscstorage.net'
   - '+.bsd4fz.com'
   - '+.bsdgco.com'
@@ -12244,7 +12238,6 @@ payload:
   - '+.cainachina.com'
   - '+.caing.com'
   - '+.cainiao.com'
-  - '+.cainiaodoc.com'
   - '+.cainiaojc.com'
   - '+.cainiaojiaocheng.com'
   - '+.cainiaoqidian.com'
@@ -12814,6 +12807,7 @@ payload:
   - '+.cde-os.com'
   - '+.cdedu.com'
   - '+.cdeledu.com'
+  - '+.cdfanmu.com'
   - '+.cdfcn.com'
   - '+.cdfgsanya.com'
   - '+.cdfhnms.com'
@@ -13037,6 +13031,7 @@ payload:
   - '+.cehbk.com'
   - '+.cehca.com'
   - '+.cehome.com'
+  - '+.cehuan.com'
   - '+.cehuashen.com'
   - '+.cehui8.com'
   - '+.cei1958.com'
@@ -13113,6 +13108,7 @@ payload:
   - '+.ces-transaction.com'
   - '+.ceseasons.com'
   - '+.cesfutures.com'
+  - '+.ceshanmi.com'
   - '+.ceshi.com'
   - '+.ceshi112.com'
   - '+.ceshigo.com'
@@ -13320,6 +13316,7 @@ payload:
   - '+.champhier.com'
   - '+.champzee.com'
   - '+.chance-ad.com'
+  - '+.chandao.net'
   - '+.chandashi.com'
   - '+.changan.biz'
   - '+.changancap.com'
@@ -14703,7 +14700,6 @@ payload:
   - '+.chwlsq.com'
   - '+.chxent.com'
   - '+.chxyq.com'
-  - '+.chyangwa.net'
   - '+.chydafuse.com'
   - '+.chyfh.com'
   - '+.chysoft.net'
@@ -15689,6 +15685,7 @@ payload:
   - '+.cnsyyx.com'
   - '+.cntagore.com'
   - '+.cntaiping.com'
+  - '+.cntally.com'
   - '+.cntan.net'
   - '+.cntapp.com'
   - '+.cntexjob.com'
@@ -17099,7 +17096,6 @@ payload:
   - '+.dagangcheng.com'
   - '+.dagongcredit.com'
   - '+.dagongnet.com'
-  - '+.daguangnews.com'
   - '+.dagufood.com'
   - '+.daguu.com'
   - '+.daguzhe.com'
@@ -17230,6 +17226,7 @@ payload:
   - '+.daluo.com'
   - '+.daluwang.net'
   - '+.damaibs.com'
+  - '+.damaicheng.com'
   - '+.damatu1.com'
   - '+.damddos.com'
   - '+.dameisheng.com'
@@ -17302,6 +17299,7 @@ payload:
   - '+.danmaku.live'
   - '+.danmakupie.com'
   - '+.danmei.la'
+  - '+.danmi.com'
   - '+.danming-ic.com'
   - '+.danmo.com'
   - '+.danmu.com'
@@ -17464,6 +17462,7 @@ payload:
   - '+.datuly.com'
   - '+.dav01.com'
   - '+.davdian.com'
+  - '+.davidlovezoe.club'
   - '+.davinfo.com'
   - '+.davvar.com'
   - '+.dawaner.net'
@@ -17678,6 +17677,7 @@ payload:
   - '+.ddswcm.com'
   - '+.ddsy.com'
   - '+.ddtugame.com'
+  - '+.ddtv135.com'
   - '+.ddtxgame.com'
   - '+.ddtz5.com'
   - '+.ddun.com'
@@ -19227,6 +19227,7 @@ payload:
   - '+.dubyc.com'
   - '+.duchang.org'
   - '+.dudong.com'
+  - '+.dudu25.com'
   - '+.dudubashi.com'
   - '+.dududu.la'
   - '+.dudumeijia.com'
@@ -20332,6 +20333,7 @@ payload:
   - '+.elitecrm.com'
   - '+.elitejlb.com'
   - '+.eliushi.com'
+  - '+.eliwang.com'
   - '+.elkpi.com'
   - '+.ellechina.com'
   - '+.ellemen.com'
@@ -21240,6 +21242,7 @@ payload:
   - '+.fanqiang.com'
   - '+.fanqianzhushou.com'
   - '+.fanqie.im'
+  - '+.fanqienovel.com'
   - '+.fanqier.com'
   - '+.fanqiesoq.com'
   - '+.fanqietuan.com'
@@ -22086,7 +22089,6 @@ payload:
   - '+.fnscore.com'
   - '+.fnysb.com'
   - '+.fnyy.net'
-  - '+.fnyy666.com'
   - '+.fnzoo.com'
   - '+.fo12.com'
   - '+.fob123.com'
@@ -24285,7 +24287,6 @@ payload:
   - '+.guangwangye.com'
   - '+.guangweihui.com'
   - '+.guangxigrc.com'
-  - '+.guangxindai.com'
   - '+.guangxiyou.com'
   - '+.guangyaguang.com'
   - '+.guangyinglvxing.com'
@@ -25210,7 +25211,6 @@ payload:
   - '+.hanjie.biz'
   - '+.hanjjl.com'
   - '+.hanju-tv.org'
-  - '+.hanjudao.com'
   - '+.hanjutiantang.com'
   - '+.hanjutv.com'
   - '+.hanjutvaa.com'
@@ -25640,7 +25640,6 @@ payload:
   - '+.hbeducloud.com'
   - '+.hbekt.com'
   - '+.hbepec.com'
-  - '+.hbez.net'
   - '+.hbezzx.com'
   - '+.hbfie.org'
   - '+.hbfire.com'
@@ -25948,7 +25947,6 @@ payload:
   - '+.hebeigwy.org'
   - '+.hebeijd.com'
   - '+.hebeinongzi.com'
-  - '+.hebeiyichen.com'
   - '+.hebeizhouji.com'
   - '+.hebgtjt.com'
   - '+.hebiw.com'
@@ -25998,6 +25996,7 @@ payload:
   - '+.heibaimanhua.com'
   - '+.heicha.com'
   - '+.heicheng51.com'
+  - '+.heidaren.com'
   - '+.heidiankeji.com'
   - '+.heigaga.com'
   - '+.heiguang.com'
@@ -26870,6 +26869,7 @@ payload:
   - '+.hnyouneng.com'
   - '+.hnyuandian.com'
   - '+.hnyuanyou.com'
+  - '+.hnyuedu.com'
   - '+.hnyumantang.com'
   - '+.hnyunji.com'
   - '+.hnyunzhiyi.com'
@@ -27687,7 +27687,6 @@ payload:
   - '+.huaxiu.ink'
   - '+.huaxj.net'
   - '+.huaxuezoo.com'
-  - '+.huayala.com'
   - '+.huayanchayu.com'
   - '+.huayanghui.net'
   - '+.huayanxiu.com'
@@ -28347,7 +28346,6 @@ payload:
   - '+.hzcnc.com'
   - '+.hzcopyright.com'
   - '+.hzcourse.com'
-  - '+.hzcuizhai.com'
   - '+.hzdajiangdong.com'
   - '+.hzdjr.com'
   - '+.hzdledu.com'
@@ -28534,6 +28532,7 @@ payload:
   - '+.i9wang.com'
   - '+.ia-shenzhen.com'
   - '+.iacblog.com'
+  - '+.iaddata.com'
   - '+.iadmob.com'
   - '+.iadmore.com'
   - '+.iaeac.org'
@@ -28644,7 +28643,6 @@ payload:
   - '+.ibornclinic.com'
   - '+.iboxpay.com'
   - '+.ibr.cc'
-  - '+.ibrainproject.org'
   - '+.ibreader.com'
   - '+.ibroadlink.com'
   - '+.ibruce.info'
@@ -28940,7 +28938,6 @@ payload:
   - '+.idname.com'
   - '+.idnscloud.com'
   - '+.ido-love.com'
-  - '+.ido114.com'
   - '+.ido512.com'
   - '+.idoacg.com'
   - '+.idocbank.com'
@@ -29450,7 +29447,6 @@ payload:
   - '+.imblog.in'
   - '+.imbtk.com'
   - '+.imbusy.me'
-  - '+.imcaviare.com'
   - '+.imcec.org'
   - '+.imcn.me'
   - '+.imdac.org'
@@ -29939,7 +29935,6 @@ payload:
   - '+.ippzone.com'
   - '+.ipr114.net'
   - '+.ipr123.com'
-  - '+.ipr66.com'
   - '+.iprchn.com'
   - '+.iprdaily.com'
   - '+.ipresst.com'
@@ -30616,6 +30611,7 @@ payload:
   - '+.janmeng.com'
   - '+.janpn.com'
   - '+.janrain.biz'
+  - '+.janz.plus'
   - '+.jarencai.com'
   - '+.jarhu.com'
   - '+.jartto.wang'
@@ -32398,7 +32394,6 @@ payload:
   - '+.jslwzk.com'
   - '+.jslxs.com'
   - '+.jsly001.com'
-  - '+.jsmaochang.com'
   - '+.jsmian.com'
   - '+.jsmjys.com'
   - '+.jsmo.xin'
@@ -33159,6 +33154,7 @@ payload:
   - '+.kanghuayun.com'
   - '+.kanghui.com'
   - '+.kanghuwang.com'
+  - '+.kangjian888.com'
   - '+.kangkang.work'
   - '+.kanglaohui.com'
   - '+.kangle.net'
@@ -34881,6 +34877,7 @@ payload:
   - '+.lbxdrugs.com'
   - '+.lbxueyuan.com'
   - '+.lbzuo.com'
+  - '+.lbzx.xyz'
   - '+.lc-cn-e1-shared.com'
   - '+.lc-cn-n1-npxfk.com'
   - '+.lc-cn-n1-shared.com'
@@ -35239,6 +35236,7 @@ payload:
   - '+.lewang.ltd'
   - '+.leweicn.com'
   - '+.lewen.la'
+  - '+.lewen2.com'
   - '+.lewen567.com'
   - '+.lewen88.com'
   - '+.lewenba.cc'
@@ -37019,6 +37017,7 @@ payload:
   - '+.lz520.net'
   - '+.lzabcd.com'
   - '+.lzane.com'
+  - '+.lzaru.com'
   - '+.lzbank.com'
   - '+.lzc369.com'
   - '+.lzcbnews.com'
@@ -37412,6 +37411,7 @@ payload:
   - '+.manshitea.com'
   - '+.mantianfei.net'
   - '+.mantusy.com'
+  - '+.manulife-sinochem.com'
   - '+.manwuxian123.com'
   - '+.manxiu-law.com'
   - '+.manylaw.com'
@@ -38563,6 +38563,7 @@ payload:
   - '+.miyanlife.com'
   - '+.miyapay.com'
   - '+.miyatech.com'
+  - '+.miyoushe.com'
   - '+.miyouu.com'
   - '+.miyuangz.com'
   - '+.miyupu.com'
@@ -38723,7 +38724,6 @@ payload:
   - '+.mnihyc.com'
   - '+.mnjj.group'
   - '+.mnkan.com'
-  - '+.mnoswqa.com'
   - '+.mnpz8.com'
   - '+.mnwww.com'
   - '+.mnxz8.com'
@@ -40285,7 +40285,6 @@ payload:
   - '+.niiwoo.com'
   - '+.nikanpian.com'
   - '+.nikebiji.com'
-  - '+.nikest.com'
   - '+.nikkisoft.com'
   - '+.nikkiup2u2.com'
   - '+.nilai.com'
@@ -42035,7 +42034,6 @@ payload:
   - '+.peiyou.com'
   - '+.peiyouwang.com'
   - '+.peizi.com'
-  - '+.peizi0371.com'
   - '+.peizizhishu.com'
   - '+.pemap.com'
   - '+.penavicoxm.com'
@@ -42696,6 +42694,7 @@ payload:
   - '+.power-sensor.com'
   - '+.powerbibbs.com'
   - '+.powercdn.com'
+  - '+.powercx.com'
   - '+.powerde.com'
   - '+.powereasy.net'
   - '+.poweric-china.com'
@@ -43147,7 +43146,6 @@ payload:
   - '+.qchouses.com'
   - '+.qcinterfacet.com'
   - '+.qcjkjg.com'
-  - '+.qcjslm.com'
   - '+.qckuaizhi.com'
   - '+.qcloud.com'
   - '+.qcloud.la'
@@ -43938,7 +43936,6 @@ payload:
   - '+.qizi.la'
   - '+.qizuang.com'
   - '+.qj023.com'
-  - '+.qj258.com'
   - '+.qj26.com'
   - '+.qjbian.com'
   - '+.qjcz.com'
@@ -44375,6 +44372,7 @@ payload:
   - '+.queniubg.com'
   - '+.queniucf.com'
   - '+.queniufm.com'
+  - '+.queniuuf.com'
   - '+.queqiaoba.com'
   - '+.querylist.cc'
   - '+.queshao.com'
@@ -44599,7 +44597,6 @@ payload:
   - '+.qyglzz.com'
   - '+.qygzbxpt.com'
   - '+.qyham.com'
-  - '+.qyi.io'
   - '+.qyiliao.com'
   - '+.qyjks.com'
   - '+.qyjpzx.com'
@@ -45302,6 +45299,7 @@ payload:
   - '+.rongshuxia.com'
   - '+.rongstone.com'
   - '+.rongtai-china.com'
+  - '+.rongxingvr.cc'
   - '+.rongyao666.com'
   - '+.rongyi.com'
   - '+.rongyiju.com'
@@ -45440,6 +45438,7 @@ payload:
   - '+.rt-blend.com'
   - '+.rt-thread.io'
   - '+.rt-thread.org'
+  - '+.rtahengtai.com'
   - '+.rtb5.com'
   - '+.rtbasia.com'
   - '+.rtcdeveloper.com'
@@ -45642,7 +45641,6 @@ payload:
   - '+.rzx.me'
   - '+.rzzyfw.com'
   - '+.s-02.com'
-  - '+.s-dom.net'
   - '+.s-ns.com'
   - '+.s-reader.com'
   - '+.s-sgames.com'
@@ -47261,7 +47259,6 @@ payload:
   - '+.shokan.org'
   - '+.shokw.com'
   - '+.shomyq.com'
-  - '+.shoot.photo'
   - '+.shootmedia.net'
   - '+.shop.globalsign.com'
   - '+.shop2255.com'
@@ -48288,7 +48285,6 @@ payload:
   - '+.smfyun.com'
   - '+.smggw.com'
   - '+.smgif.com'
-  - '+.smgjj.com'
   - '+.smgstar.com'
   - '+.smhdoto.com'
   - '+.smhsw.com'
@@ -48903,7 +48899,6 @@ payload:
   - '+.srm.dji.com'
   - '+.srrsh.com'
   - '+.srrtvu.com'
-  - '+.srssn.com'
   - '+.srtong.com'
   - '+.srun.com'
   - '+.srw00.com'
@@ -49266,6 +49261,7 @@ payload:
   - '+.suisuihu.com'
   - '+.suisuijiang.com'
   - '+.suixingjia.com'
+  - '+.suixinzulin.com'
   - '+.suixw.com'
   - '+.suiyichong.com'
   - '+.suiyiju.com'
@@ -50574,6 +50570,7 @@ payload:
   - '+.teamotto.net'
   - '+.teamshub.com'
   - '+.teamtopgame.com'
+  - '+.teandy.com'
   - '+.teapic.com'
   - '+.teatreexy.com'
   - '+.teazhishi.com'
@@ -51434,6 +51431,7 @@ payload:
   - '+.todaycache.net'
   - '+.todayguizhou.com'
   - '+.todayidc.com'
+  - '+.todayintnet.com'
   - '+.todayios.com'
   - '+.todayisp.net'
   - '+.todaynic.com'
@@ -51920,7 +51918,6 @@ payload:
   - '+.tsddu.com'
   - '+.tsdlp.com'
   - '+.tsdm.net'
-  - '+.tsdmw.net'
   - '+.tsdxb.com'
   - '+.tsfucai.com'
   - '+.tsg-online.net'
@@ -52474,7 +52471,6 @@ payload:
   - '+.tyjmmy.com'
   - '+.tyjmqz.com'
   - '+.tyksl.com'
-  - '+.tyloo3d.com'
   - '+.tymcdn.com'
   - '+.tyn.cc'
   - '+.tyncar.com'
@@ -53727,7 +53723,6 @@ payload:
   - '+.vmengblog.com'
   - '+.vmeti.com'
   - '+.vmfor.com'
-  - '+.vmgirls.com'
   - '+.vmicloud.com'
   - '+.vmoiver.com'
   - '+.vmonkey.mobi'
@@ -54187,6 +54182,7 @@ payload:
   - '+.wangjianshuo.com'
   - '+.wangjinle.com'
   - '+.wangjubao.com'
+  - '+.wangjumeng.xin'
   - '+.wangjunwei.com'
   - '+.wangkl.com'
   - '+.wangl903.com'
@@ -55671,7 +55667,6 @@ payload:
   - '+.wj-hospital.com'
   - '+.wj001.com'
   - '+.wj166.com'
-  - '+.wjage.com'
   - '+.wjajw.com'
   - '+.wjasset.com'
   - '+.wjbb.com'
@@ -56176,7 +56171,6 @@ payload:
   - '+.wsdvs.com'
   - '+.wsdvs.info'
   - '+.wsdvs.org'
-  - '+.wse.me'
   - '+.wsecar.com'
   - '+.wseen.com'
   - '+.wselearning.com'
@@ -56378,6 +56372,7 @@ payload:
   - '+.wumart.com'
   - '+.wumeishebei.com'
   - '+.wumii.com'
+  - '+.wumii.org'
   - '+.wumii.tv'
   - '+.wuming.com'
   - '+.wuqing.cc'
@@ -56769,7 +56764,6 @@ payload:
   - '+.xahuapu.net'
   - '+.xahunter.com'
   - '+.xaidc.com'
-  - '+.xaifin.com'
   - '+.xaigame.com'
   - '+.xainjo.com'
   - '+.xaixs.org'
@@ -57897,6 +57891,7 @@ payload:
   - '+.xingxing.com'
   - '+.xingxingjizhang.com'
   - '+.xingxingzu.com'
+  - '+.xingyaopan.com'
   - '+.xingye.work'
   - '+.xingyi.com'
   - '+.xingyigz.com'
@@ -58905,7 +58900,6 @@ payload:
   - '+.xunbin.com'
   - '+.xunbuy.com'
   - '+.xunchabing.com'
-  - '+.xundalm.com'
   - '+.xundayun.com'
   - '+.xundns.com'
   - '+.xundns.net'
@@ -59357,7 +59351,6 @@ payload:
   - '+.yanglaozhan.org'
   - '+.yanglee.com'
   - '+.yangli.com'
-  - '+.yanglingxi.com'
   - '+.yanglong.pro'
   - '+.yangluojob.com'
   - '+.yangmao.info'
@@ -59887,6 +59880,7 @@ payload:
   - '+.yhtx.tv'
   - '+.yhurl.com'
   - '+.yhwomen.com'
+  - '+.yhx3318.com'
   - '+.yhxuexiao.com'
   - '+.yhy50.com'
   - '+.yhyf.cc'
@@ -60018,7 +60012,6 @@ payload:
   - '+.yihuikeji.vip'
   - '+.yihuimg.com'
   - '+.yihun.com'
-  - '+.yii-china.com'
   - '+.yiibai.com'
   - '+.yiibook.com'
   - '+.yiichina.com'
@@ -60462,6 +60455,7 @@ payload:
   - '+.yj-fun.com'
   - '+.yj.ink'
   - '+.yj3g.com'
+  - '+.yjai.art'
   - '+.yjbys.com'
   - '+.yjcf360.com'
   - '+.yjcp.com'
@@ -62702,6 +62696,7 @@ payload:
   - '+.zhainanhuayuan.com'
   - '+.zhaiqianfeng.com'
   - '+.zhairport.com'
+  - '+.zhaishulou.com'
   - '+.zhaixiaoniu.com'
   - '+.zhaixue.cc'
   - '+.zhan.com'
@@ -62713,7 +62708,6 @@ payload:
   - '+.zhangbo.org'
   - '+.zhangchi.art'
   - '+.zhangdanyang.com'
-  - '+.zhangdongshengtech.com'
   - '+.zhangdongxuan.com'
   - '+.zhangdu5.net'
   - '+.zhangdu520.com'
@@ -64570,6 +64564,7 @@ payload:
   - '+.zutianke.com'
   - '+.zuulee.com'
   - '+.zuxcgames.com'
+  - '+.zuxiaoqi.com'
   - '+.zuxiaoyi.com'
   - '+.zuyunfei.com'
   - '+.zuyushop.com'
