--- a/directbak.yaml
+++ b/directbak.yaml
@@ -143,7 +143,6 @@ payload:
   - '+.021networks.com'
   - '+.021phone.com'
   - '+.021ren.com'
-  - '+.021senxi.com'
   - '+.021sports.com'
   - '+.021tk.com'
   - '+.021yongzhuo.com'
@@ -904,7 +903,6 @@ payload:
   - '+.114ic.net'
   - '+.114jc.com'
   - '+.114jcw.com'
-  - '+.114jia.net'
   - '+.114la.com'
   - '+.114mall.com'
   - '+.114menhu.com'
@@ -1197,7 +1195,6 @@ payload:
   - '+.139down.com'
   - '+.139life.com'
   - '+.139shop.com'
-  - '+.139site.com'
   - '+.139talk.com'
   - '+.139w.com'
   - '+.139wanke.com'
@@ -1886,7 +1883,6 @@ payload:
   - '+.1yb.co'
   - '+.1yd.me'
   - '+.1yee.com'
-  - '+.1ykh.com'
   - '+.1yun.cc'
   - '+.1yyg.com'
   - '+.1zhangdan.com'
@@ -3350,7 +3346,6 @@ payload:
   - '+.411au.com'
   - '+.4124.com'
   - '+.4143.cc'
-  - '+.41443.com'
   - '+.41717.net'
   - '+.4177.com'
   - '+.418999.com'
@@ -4926,7 +4921,6 @@ payload:
   - '+.5iyxw.net'
   - '+.5j.com'
   - '+.5jin.org'
-  - '+.5jjc.net'
   - '+.5jjdw.com'
   - '+.5jli.com'
   - '+.5joys.com'
@@ -6023,7 +6017,6 @@ payload:
   - '+.86590.com'
   - '+.866ds.com'
   - '+.8673h.com'
-  - '+.867game.com'
   - '+.8682.cc'
   - '+.8684.com'
   - '+.868578.com'
@@ -6336,7 +6329,6 @@ payload:
   - '+.91378.com'
   - '+.913vr.com'
   - '+.913you.com'
-  - '+.914.com'
   - '+.91472.com'
   - '+.915.com'
   - '+.915.im'
@@ -7052,7 +7044,6 @@ payload:
   - '+.9stor.com'
   - '+.9syw.com'
   - '+.9taobao.com'
-  - '+.9thws.com'
   - '+.9to.com'
   - '+.9tong.com'
   - '+.9too.net'
@@ -7340,7 +7331,6 @@ payload:
   - '+.adapay.tech'
   - '+.adarrive.com'
   - '+.adashuo.com'
-  - '+.adawod.com'
   - '+.adaxin.com'
   - '+.adbats.com'
   - '+.adbxb.com'
@@ -7757,7 +7747,6 @@ payload:
   - '+.aigupiao.com'
   - '+.aihaisi.com'
   - '+.aihala.com'
-  - '+.aihandu.com'
   - '+.aihanfu.com'
   - '+.aihanfu.net'
   - '+.aihangtian.com'
@@ -8886,6 +8875,7 @@ payload:
   - '+.appyao.com'
   - '+.appying.com'
   - '+.appykt.com'
+  - '+.appyouni.com'
   - '+.appzhonghua.com'
   - '+.apsgo.com'
   - '+.apt.so'
@@ -9215,7 +9205,6 @@ payload:
   - '+.auspous.com'
   - '+.aussino.net'
   - '+.austargroup.com'
-  - '+.austarskill.com'
   - '+.austarstudy.com'
   - '+.ausuu.com'
   - '+.auto-ccpit.org'
@@ -13398,7 +13387,6 @@ payload:
   - '+.chaojifan.com'
   - '+.chaojifangyu.com'
   - '+.chaojihetong.com'
-  - '+.chaojilian.net'
   - '+.chaojishipin.com'
   - '+.chaojixiaobaicai.club'
   - '+.chaojiying.com'
@@ -15653,7 +15641,6 @@ payload:
   - '+.cnscee.com'
   - '+.cnscore.com'
   - '+.cnsdjxw.com'
-  - '+.cnsdzb.com'
   - '+.cnseay.com'
   - '+.cnseeq.com'
   - '+.cnsesan.com'
@@ -17630,7 +17617,6 @@ payload:
   - '+.dddso.com'
   - '+.dddwan.com'
   - '+.dde-desktop.org'
-  - '+.ddepin.com'
   - '+.ddfans.com'
   - '+.ddfchina.com'
   - '+.ddgjjj.com'
@@ -18407,7 +18393,6 @@ payload:
   - '+.diypda.com'
   - '+.diyring.cc'
   - '+.diytrade.com'
-  - '+.diyvm.com'
   - '+.diywoju.com'
   - '+.diyworld.com'
   - '+.diywz.com'
@@ -19111,7 +19096,6 @@ payload:
   - '+.dropboxchina.com'
   - '+.dropsec.xyz'
   - '+.drouma.com'
-  - '+.drpneu.com'
   - '+.drscrewdriver.com'
   - '+.drtyf.com'
   - '+.drugfuture.com'
@@ -19375,7 +19359,6 @@ payload:
   - '+.dushu369.com'
   - '+.dushudaren.com'
   - '+.dushuge.net'
-  - '+.dushuzhe.com'
   - '+.dushw.com'
   - '+.dustess.com'
   - '+.dustit.me'
@@ -21159,12 +21142,10 @@ payload:
   - '+.fangdaijisuanqi.com'
   - '+.fangdaijisuanqi.net'
   - '+.fangdd.com'
-  - '+.fangdede.com'
   - '+.fangdichanceo.com'
   - '+.fangdr.com'
   - '+.fangfa.net'
   - '+.fangfaku.net'
-  - '+.fanghouguo.com'
   - '+.fanghuafu.com'
   - '+.fanghuihui.com'
   - '+.fanging.com'
@@ -21396,7 +21377,6 @@ payload:
   - '+.fbsjedu.com'
   - '+.fbuy365.com'
   - '+.fbxslw.com'
-  - '+.fc-kf.com'
   - '+.fc0531.com'
   - '+.fc0633.com'
   - '+.fc12319.com'
@@ -21978,7 +21958,6 @@ payload:
   - '+.flashempire.com'
   - '+.flashgame163.com'
   - '+.flashgene.com'
-  - '+.flashget.com'
   - '+.flashgoing.com'
   - '+.flashmemoryworld.com'
   - '+.flashv8.com'
@@ -23119,7 +23098,6 @@ payload:
   - '+.gdmxjy.com'
   - '+.gdong.com'
   - '+.gdou.com'
-  - '+.gdpanshi.com'
   - '+.gdpyrtvu.com'
   - '+.gdqynews.com'
   - '+.gdrc.com'
@@ -23217,7 +23195,6 @@ payload:
   - '+.geekluo.com'
   - '+.geekmaker.com'
   - '+.geekman.vip'
-  - '+.geekori.com'
   - '+.geekotg.com'
   - '+.geekpark.net'
   - '+.geekpwn.org'
@@ -24691,7 +24668,6 @@ payload:
   - '+.gz360.com'
   - '+.gz4399.com'
   - '+.gz4u.net'
-  - '+.gz5.com'
   - '+.gz528.com'
   - '+.gz85.com'
   - '+.gz91.com'
@@ -26401,7 +26377,6 @@ payload:
   - '+.hicss.net'
   - '+.hiczp.com'
   - '+.hidesigncloud.com'
-  - '+.hideystudio.com'
   - '+.hiditie.com'
   - '+.hidna.net'
   - '+.hidva.com'
@@ -26829,7 +26804,6 @@ payload:
   - '+.hnshengben.com'
   - '+.hnsimeng.com'
   - '+.hnsiwei.com'
-  - '+.hnsjgl.com'
   - '+.hnsjxcl.com'
   - '+.hnsktc.com'
   - '+.hnsmj.org'
@@ -27921,7 +27895,6 @@ payload:
   - '+.hukou021.com'
   - '+.hukoushanghai.com'
   - '+.hulai.com'
-  - '+.hulamao.com'
   - '+.hulanap.com'
   - '+.hulianmaibo.com'
   - '+.hulinhong.com'
@@ -28565,7 +28538,6 @@ payload:
   - '+.iapp4me.com'
   - '+.iapple123.com'
   - '+.iappler.net'
-  - '+.iapppay.com'
   - '+.iapps.im'
   - '+.iappstoday.com'
   - '+.iars-wuhan.com'
@@ -28609,7 +28581,6 @@ payload:
   - '+.ibenxi.com'
   - '+.ibestapp.com'
   - '+.ibestfanli.com'
-  - '+.ibestservice.com'
   - '+.ibestv.com'
   - '+.ibeta.me'
   - '+.ibgbuy.com'
@@ -29415,7 +29386,6 @@ payload:
   - '+.imageaccelerate.com'
   - '+.imageedu.com'
   - '+.imagefz.com'
-  - '+.imagehub.cc'
   - '+.imagelol.com'
   - '+.imagepy.org'
   - '+.images-cache.com'
@@ -29446,7 +29416,6 @@ payload:
   - '+.imbeer.com'
   - '+.imblog.in'
   - '+.imbtk.com'
-  - '+.imbusy.me'
   - '+.imcec.org'
   - '+.imcn.me'
   - '+.imdac.org'
@@ -29541,7 +29510,6 @@ payload:
   - '+.imoeer.com'
   - '+.imofan.com'
   - '+.imoffice.com'
-  - '+.imok01.com'
   - '+.imolink.com'
   - '+.imomoe.ai'
   - '+.imomoe.com'
@@ -29637,7 +29605,6 @@ payload:
   - '+.indienova.com'
   - '+.indier.com'
   - '+.indmi.com'
-  - '+.indongfang.com'
   - '+.induta.com'
   - '+.indvaan.com'
   - '+.ineice.com'
@@ -30456,7 +30423,6 @@ payload:
   - '+.ixiaolu.com'
   - '+.ixiaowai.com'
   - '+.ixiatxt.com'
-  - '+.ixieme.com'
   - '+.ixigua.com'
   - '+.ixiguan.com'
   - '+.ixiguavideo.com'
@@ -31517,7 +31483,6 @@ payload:
   - '+.jingxianglawfirm.com'
   - '+.jingxinad.com'
   - '+.jingxuanwang.com'
-  - '+.jingy8.com'
   - '+.jingyakt.com'
   - '+.jingyan8.cc'
   - '+.jingyanben.com'
@@ -31653,6 +31618,7 @@ payload:
   - '+.jiongyaya.com'
   - '+.jiou.me'
   - '+.jiouyun.com'
+  - '+.jiping.site'
   - '+.jipingacg.com'
   - '+.jipinwww.com'
   - '+.jiqid.com'
@@ -32336,7 +32302,6 @@ payload:
   - '+.jsdthx.com'
   - '+.jsdujuan.com'
   - '+.jseepub.com'
-  - '+.jseie.org'
   - '+.jseoptics.com'
   - '+.jser.com'
   - '+.jser.io'
@@ -32569,7 +32534,6 @@ payload:
   - '+.jujuwan.com'
   - '+.jukandiannews.com'
   - '+.jukebao.com'
-  - '+.jukebao123.com'
   - '+.jukejia.com'
   - '+.juketai.net'
   - '+.jukuu.com'
@@ -33232,7 +33196,6 @@ payload:
   - '+.kaolacdn.com'
   - '+.kaolafm.com'
   - '+.kaolafm.net'
-  - '+.kaolayy.com'
   - '+.kaolazhengxin.com'
   - '+.kaopu001.com'
   - '+.kaopubao.com'
@@ -34107,7 +34070,6 @@ payload:
   - '+.kuaidizs.com'
   - '+.kuaiduwen.com'
   - '+.kuaiex.com'
-  - '+.kuaifa.mobi'
   - '+.kuaifaka.com'
   - '+.kuaifawu.com'
   - '+.kuaifeng.com'
@@ -35380,7 +35342,6 @@ payload:
   - '+.liangpinriyu.com'
   - '+.liangqikeji.com'
   - '+.liangshangou.com'
-  - '+.liangshuang.name'
   - '+.liangshunet.com'
   - '+.liangxinyao.com'
   - '+.liangxu.wang'
@@ -36132,7 +36093,6 @@ payload:
   - '+.lm335.com'
   - '+.lm553.com'
   - '+.lm685.com'
-  - '+.lm811.com'
   - '+.lm832.com'
   - '+.lm865.com'
   - '+.lm9999.com'
@@ -36413,7 +36373,6 @@ payload:
   - '+.looyuoms.com'
   - '+.looyush.com'
   - '+.lopetech.net'
-  - '+.lophoctienganh.org'
   - '+.lopkino.com'
   - '+.lopopoo.com'
   - '+.lopss.com'
@@ -37680,7 +37639,6 @@ payload:
   - '+.mcyhfl.com'
   - '+.mcyo.pw'
   - '+.mczyz.com'
-  - '+.md0408.com'
   - '+.mdaxue.com'
   - '+.mdbimg.com'
   - '+.mdckj.com'
@@ -37827,7 +37785,6 @@ payload:
   - '+.meijiezaixian.net'
   - '+.meijingjie.com'
   - '+.meijiu.com'
-  - '+.meijuba.com'
   - '+.meijucenter.com'
   - '+.meijufans.com'
   - '+.meijukan.com'
@@ -38569,7 +38526,6 @@ payload:
   - '+.miyupu.com'
   - '+.miyushu.com'
   - '+.mizhe.com'
-  - '+.mizhenhao.com'
   - '+.mizhimedia.com'
   - '+.mizhizbb.vip'
   - '+.mizhizbf.vip'
@@ -39871,7 +39827,6 @@ payload:
   - '+.nbcyl.com'
   - '+.nbdeli.com'
   - '+.nbdeli.net'
-  - '+.nbdig.com'
   - '+.nbdisco.com'
   - '+.nbegame.com'
   - '+.nbegame.net'
@@ -40467,6 +40422,7 @@ payload:
   - '+.nlzpy.com'
   - '+.nm8yx.com'
   - '+.nmet168.com'
+  - '+.nmgchigang.com'
   - '+.nmgd.com'
   - '+.nmgfood.net'
   - '+.nmgfrank.com'
@@ -40981,7 +40937,6 @@ payload:
   - '+.ofyoo.com'
   - '+.ogaoxiao.com'
   - '+.ogccdn.com'
-  - '+.oh.sb'
   - '+.oh100.com'
   - '+.ohaotian.com'
   - '+.ohipic.com'
@@ -43177,7 +43132,6 @@ payload:
   - '+.qcwlpay.com'
   - '+.qcwlseo.com'
   - '+.qcwxjs.com'
-  - '+.qcwyxx.com'
   - '+.qcy.com'
   - '+.qcymall.com'
   - '+.qcyoung.com'
@@ -43635,7 +43589,6 @@ payload:
   - '+.qimihe.com'
   - '+.qiming.info'
   - '+.qiming.tech'
-  - '+.qiming868.com'
   - '+.qimingcx.com'
   - '+.qimingdao.com'
   - '+.qimingpian.com'
@@ -44021,7 +43974,6 @@ payload:
   - '+.qmz5.com'
   - '+.qmzs.com'
   - '+.qnbar.com'
-  - '+.qncye.net'
   - '+.qncyw.com'
   - '+.qndb.net'
   - '+.qnfuli.com'
@@ -44636,7 +44588,6 @@ payload:
   - '+.qzclfc.com'
   - '+.qzdigg.com'
   - '+.qzdyyy.com'
-  - '+.qzfxyy.com'
   - '+.qzhlkj.net'
   - '+.qzhmzx.com'
   - '+.qzjcd.com'
@@ -45423,7 +45374,6 @@ payload:
   - '+.rsdgd.com'
   - '+.rsdwg.com'
   - '+.rsdyy.com'
-  - '+.rsk26.com'
   - '+.rsng.net'
   - '+.rso.wang'
   - '+.rss.ink'
@@ -47657,6 +47607,7 @@ payload:
   - '+.shyfci.com'
   - '+.shygc.net'
   - '+.shyhhema.com'
+  - '+.shyihuoh.com'
   - '+.shyingfu.net'
   - '+.shyjad.com'
   - '+.shykx.com'
@@ -48322,7 +48273,6 @@ payload:
   - '+.smtchinamag.com'
   - '+.smtcl.com'
   - '+.smtdc.com'
-  - '+.smth.org'
   - '+.smthome.net'
   - '+.smtlzb.com'
   - '+.smtsvs.com'
@@ -49027,6 +48977,7 @@ payload:
   - '+.start.htc.com'
   - '+.start.htcsense.com'
   - '+.startcarlife.com'
+  - '+.startech.ltd'
   - '+.starting2000.com'
   - '+.startogether1.com'
   - '+.startos.com'
@@ -51367,7 +51318,6 @@ payload:
   - '+.tlwok.com'
   - '+.tlyy.cc'
   - '+.tm312.com'
-  - '+.tma-001.com'
   - '+.tmaill.com'
   - '+.tmall.casa'
   - '+.tmall.com'
@@ -53073,7 +53023,6 @@ payload:
   - '+.urlos.com'
   - '+.urovo.com'
   - '+.urovoworld.com'
-  - '+.urpimp.com'
   - '+.ursb.me'
   - '+.urselect.com'
   - '+.urtrust.com'
@@ -55199,7 +55148,6 @@ payload:
   - '+.whctv.com'
   - '+.whcx365.com'
   - '+.whcyit.com'
-  - '+.whdaring.com'
   - '+.whdayy.com'
   - '+.whdckj.com'
   - '+.whddgc.com'
@@ -55316,7 +55264,6 @@ payload:
   - '+.whmoto.com'
   - '+.whmylike.cc'
   - '+.whmylikekq.com'
-  - '+.whnatural.com'
   - '+.whnfc.com'
   - '+.whoami.akamai.net'
   - '+.whocool.com'
@@ -56788,7 +56735,6 @@ payload:
   - '+.xaoyao.com'
   - '+.xapcn.com'
   - '+.xaqdrs.com'
-  - '+.xaqsl.com'
   - '+.xaredian.com'
   - '+.xarxrljt.com'
   - '+.xaseastar.com'
@@ -56935,7 +56881,6 @@ payload:
   - '+.xcx-x.com'
   - '+.xcxd-inc.com'
   - '+.xcxs222.com'
-  - '+.xcxs520.com'
   - '+.xcxvs.com'
   - '+.xcxwo.com'
   - '+.xcxx28.com'
@@ -57319,7 +57264,6 @@ payload:
   - '+.xiaobaixitong.com'
   - '+.xiaobangbaoxian.com'
   - '+.xiaobao360.com'
-  - '+.xiaobao8.com'
   - '+.xiaobaodt.com'
   - '+.xiaobaoonline.com'
   - '+.xiaobaostudio.com'
@@ -58621,7 +58565,6 @@ payload:
   - '+.xs7.com'
   - '+.xs7.la'
   - '+.xs74.com'
-  - '+.xs880.com'
   - '+.xs91.net'
   - '+.xsb120.com'
   - '+.xsbiquge.com'
@@ -62027,6 +61970,7 @@ payload:
   - '+.yyds.co'
   - '+.yydzh.com'
   - '+.yyearth.com'
+  - '+.yyedufeb.com'
   - '+.yyes.shop'
   - '+.yyestar.com'
   - '+.yyetss.com'
@@ -64000,7 +63944,6 @@ payload:
   - '+.zking.com'
   - '+.zkl2333.com'
   - '+.zkoffcn.com'
-  - '+.zkokh.com'
   - '+.zkpk.org'
   - '+.zkread.com'
   - '+.zkroom.com'
