--- a/directbak.yaml
+++ b/directbak.yaml
@@ -627,6 +627,7 @@ payload:
   - '+.0d.work'
   - '+.0daily.com'
   - '+.0dayku.com'
+  - '+.0du520.com'
   - '+.0duxs.com'
   - '+.0easy.com'
   - '+.0fenbei.com'
@@ -1375,6 +1376,7 @@ payload:
   - '+.169t.com'
   - '+.16boke.com'
   - '+.16bus.net'
+  - '+.16d.cc'
   - '+.16fan.com'
   - '+.16game.net'
   - '+.16hyt.com'
@@ -3096,6 +3098,7 @@ payload:
   - '+.3975cdn.com'
   - '+.3977s.com'
   - '+.39ask.net'
+  - '+.39center.com'
   - '+.39clean.com'
   - '+.39cs.com'
   - '+.39dg.com'
@@ -4791,7 +4794,6 @@ payload:
   - '+.593yx.com'
   - '+.5947.net'
   - '+.59490.com'
-  - '+.5956pp.com'
   - '+.595818.com'
   - '+.595led.com'
   - '+.596fc.com'
@@ -5886,6 +5888,7 @@ payload:
   - '+.80sec.com'
   - '+.80shihua.com'
   - '+.80sjy.net'
+  - '+.80test.com'
   - '+.80tian.com'
   - '+.80txt.com'
   - '+.80txt.la'
@@ -6987,6 +6990,7 @@ payload:
   - '+.9first.com'
   - '+.9fpuhui.com'
   - '+.9fs.com'
+  - '+.9fzt.com'
   - '+.9g.com'
   - '+.9g8g.com'
   - '+.9gty.net'
@@ -7113,6 +7117,7 @@ payload:
   - '+.a9377j.com'
   - '+.a963.com'
   - '+.a9vg.com'
+  - '+.aa-ab.com'
   - '+.aa43z7.com'
   - '+.aa65535.com'
   - '+.aa7.org'
@@ -7512,7 +7517,6 @@ payload:
   - '+.afunapp.com'
   - '+.afzhan.com'
   - '+.ag17.wang'
-  - '+.ag365.com'
   - '+.agalwood.net'
   - '+.agamepower.com'
   - '+.agcloudcs.com'
@@ -8163,6 +8167,7 @@ payload:
   - '+.alithon.com'
   - '+.alitrip.com'
   - '+.alitrip.hk'
+  - '+.alittlesoldier.com'
   - '+.aliued.com'
   - '+.aliunicorn.com'
   - '+.aliuv.com'
@@ -10590,6 +10595,7 @@ payload:
   - '+.bigbigwork.com'
   - '+.bigc.at'
   - '+.bigcat.com'
+  - '+.bigcloud.cyou'
   - '+.bigda.com'
   - '+.bigdata-expo.org'
   - '+.bigdata.ren'
@@ -12056,6 +12062,7 @@ payload:
   - '+.c-3.moe'
   - '+.c-canyin.com'
   - '+.c-cnc.com'
+  - '+.c-cpp.com'
   - '+.c-ctrip.com'
   - '+.c-e-m.com'
   - '+.c-estbon.com'
@@ -12886,6 +12893,7 @@ payload:
   - '+.cdndm5.net'
   - '+.cdndo.com'
   - '+.cdnet110.com'
+  - '+.cdnetdns.net'
   - '+.cdnff.com'
   - '+.cdngslb.com'
   - '+.cdngslb8.com'
@@ -12933,6 +12941,7 @@ payload:
   - '+.cdsb.com'
   - '+.cdsb.mobi'
   - '+.cdsenfa.com'
+  - '+.cdsgsz.com'
   - '+.cdshangceng.com'
   - '+.cdshijue.com'
   - '+.cdsjjy.com'
@@ -14495,6 +14504,7 @@ payload:
   - '+.chongdiantou.com'
   - '+.chonghi.com'
   - '+.chongmingzhuce.com'
+  - '+.chongnengjihua.com'
   - '+.chongqingdongjin.com'
   - '+.chongqingyoupin.com'
   - '+.chongsoft.com'
@@ -16920,7 +16930,6 @@ payload:
   - '+.czbq.net'
   - '+.czbtv.com'
   - '+.czbx18.com'
-  - '+.czcac.com'
   - '+.czcarbon.com'
   - '+.czchuanlin.com'
   - '+.czcid.com'
@@ -18480,7 +18489,6 @@ payload:
   - '+.dljs.net'
   - '+.dllake.com'
   - '+.dllhook.com'
-  - '+.dllku.com'
   - '+.dllzj.com'
   - '+.dlmonita.com'
   - '+.dlmzk.com'
@@ -19548,6 +19556,7 @@ payload:
   - '+.dzdvip.com'
   - '+.dzfc.com'
   - '+.dzfxh.com'
+  - '+.dzglsb.net'
   - '+.dzgxq.com'
   - '+.dzhaoj.com'
   - '+.dzhope.com'
@@ -22631,6 +22640,7 @@ payload:
   - '+.fz222.com'
   - '+.fz2sc.com'
   - '+.fz597.com'
+  - '+.fzbaw.com'
   - '+.fzccpit.org'
   - '+.fzchpos.com'
   - '+.fzcyjh.com'
@@ -23677,6 +23687,7 @@ payload:
   - '+.go2tu.com'
   - '+.go2yd.com'
   - '+.go300.com'
+  - '+.go5.cc'
   - '+.goalan.net'
   - '+.goalhi.com'
   - '+.goalmobi.com'
@@ -25157,6 +25168,7 @@ payload:
   - '+.hanfei.net'
   - '+.hanfengcars.com'
   - '+.hanfugong.com'
+  - '+.hangduhc.com'
   - '+.hangfushi.com'
   - '+.hangge.com'
   - '+.hanghaimeng.com'
@@ -27290,6 +27302,7 @@ payload:
   - '+.hsoow.com'
   - '+.hspress.net'
   - '+.hsr2013.com'
+  - '+.hsrnsw.com'
   - '+.hssdk.com'
   - '+.hssdtest.com'
   - '+.hssemi.com'
@@ -28282,7 +28295,6 @@ payload:
   - '+.hyundai-hmtc.com'
   - '+.hyundaibeijing.com'
   - '+.hyuuhit.com'
-  - '+.hyxrzs.com'
   - '+.hyyf.net'
   - '+.hyyoa.com'
   - '+.hyzcservice.com'
@@ -29681,6 +29693,7 @@ payload:
   - '+.inmeng.net'
   - '+.inmuu.com'
   - '+.inneed.club'
+  - '+.innity.com'
   - '+.innjia.com'
   - '+.innocn.com'
   - '+.innocomn.com'
@@ -31343,6 +31356,7 @@ payload:
   - '+.jilingwy.org'
   - '+.jilinpujiyiyuan.com'
   - '+.jilinwula.com'
+  - '+.jilinxiangyun.com'
   - '+.jiliyun.com'
   - '+.jimeisilk.com'
   - '+.jimeng.mobi'
@@ -31511,6 +31525,7 @@ payload:
   - '+.jinhusns.com'
   - '+.jinianbi.com'
   - '+.jiniance8.com'
+  - '+.jinjianbio.com'
   - '+.jinjiang.com'
   - '+.jinjianginns.com'
   - '+.jinjingquan.com'
@@ -33785,7 +33800,6 @@ payload:
   - '+.knowingclouds.com'
   - '+.knowingcloudvip.com'
   - '+.knowingyun.com'
-  - '+.knowncoin.com'
   - '+.knownpcb.com'
   - '+.knownsec.com'
   - '+.knowsafe.com'
@@ -35299,6 +35313,7 @@ payload:
   - '+.lhrbszb.com'
   - '+.lhs-arts.org'
   - '+.lhs11.com'
+  - '+.lhs99.com'
   - '+.lhsdad.com'
   - '+.lhsoso.com'
   - '+.lhwill.com'
@@ -35582,6 +35597,7 @@ payload:
   - '+.linakesi.com'
   - '+.linban.com'
   - '+.lincoc.com'
+  - '+.lindapatent.com'
   - '+.lindiankanshu.com'
   - '+.line0.com'
   - '+.linecg.com'
@@ -37123,6 +37139,7 @@ payload:
   - '+.magicwinmail.com'
   - '+.magiskcn.com'
   - '+.magook.com'
+  - '+.magtechjournal.com'
   - '+.maguang.net'
   - '+.magvision.com'
   - '+.mahetao.org'
@@ -37607,6 +37624,7 @@ payload:
   - '+.mcdusiv.com'
   - '+.mcdvisa.com'
   - '+.mcearnmore.com'
+  - '+.mcfsji.com'
   - '+.mcfun.tv'
   - '+.mcfuzhu.net'
   - '+.mchat.com'
@@ -39144,6 +39162,7 @@ payload:
   - '+.mt-bbs.com'
   - '+.mt-spirit.com'
   - '+.mt-wire.com'
+  - '+.mt77.com'
   - '+.mtasia.net'
   - '+.mtavip.com'
   - '+.mtblj.com'
@@ -39613,7 +39632,6 @@ payload:
   - '+.myzhongjin.com'
   - '+.myzte.com'
   - '+.mz-oneacg.com'
-  - '+.mz-sys.com'
   - '+.mz6.net'
   - '+.mzbei.com'
   - '+.mzboss.com'
@@ -39645,6 +39663,7 @@ payload:
   - '+.n-mobile.com'
   - '+.n0808.com'
   - '+.n12345.com'
+  - '+.n127.com'
   - '+.n12m.cc'
   - '+.n21.cc'
   - '+.n3293.com'
@@ -39871,6 +39890,7 @@ payload:
   - '+.nciku.com'
   - '+.nciyuan.com'
   - '+.ncjld.com'
+  - '+.ncjy.net'
   - '+.ncmem.com'
   - '+.ncnynl.com'
   - '+.ncpa-classic.com'
@@ -42015,6 +42035,7 @@ payload:
   - '+.peopleart.tv'
   - '+.peopledailyhealth.com'
   - '+.peopledailypress.com'
+  - '+.peoplemooc.com'
   - '+.peoplenews.eu'
   - '+.peoplerail.com'
   - '+.peopleyuqing.com'
@@ -44271,6 +44292,7 @@ payload:
   - '+.quanxi.cc'
   - '+.quanxiangyun.com'
   - '+.quanxiaoshuo.com'
+  - '+.quanxruc.com'
   - '+.quanyin.xyz'
   - '+.quanzhanketang.com'
   - '+.quanzhi.com'
@@ -44653,6 +44675,7 @@ payload:
   - '+.rainmanfloor.com'
   - '+.rainyun.com'
   - '+.raisecom.com'
+  - '+.raisedsun.com'
   - '+.raisinsta.com'
   - '+.raiyi.com'
   - '+.rajax.me'
@@ -46348,6 +46371,7 @@ payload:
   - '+.sentetuwen.com'
   - '+.sentsin.com'
   - '+.sentuxueyuan.com'
+  - '+.senyou.com'
   - '+.senyuanhi.com'
   - '+.senyuanzhonggong.com'
   - '+.seo-820.com'
@@ -46829,6 +46853,7 @@ payload:
   - '+.shenduwin10.com'
   - '+.shenduwin8.com'
   - '+.shengangzc.com'
+  - '+.shengaohua.com'
   - '+.shengbangshenghua.com'
   - '+.shengbaoluo.com'
   - '+.shengbenzixun.com'
@@ -48918,6 +48943,7 @@ payload:
   - '+.ssxxp.com'
   - '+.ssyar.com'
   - '+.ssyer.com'
+  - '+.ssytnet.com'
   - '+.ssyule.com'
   - '+.ssyxlx.com'
   - '+.ssyzx.net'
@@ -49574,6 +49600,7 @@ payload:
   - '+.sxpdk.com'
   - '+.sxplc.com'
   - '+.sxpmg.com'
+  - '+.sxpojie.com'
   - '+.sxprgc.com'
   - '+.sxpta.com'
   - '+.sxpyzg.com'
@@ -50030,7 +50057,6 @@ payload:
   - '+.taaas.org'
   - '+.tabalt.net'
   - '+.tachangxing.com'
-  - '+.taclsc.org'
   - '+.tacool.com'
   - '+.tactan.net'
   - '+.tadseeker.com'
@@ -50297,6 +50323,7 @@ payload:
   - '+.taoku.com'
   - '+.taolusm.com'
   - '+.taoluzhibo56.com'
+  - '+.taolvtong.com'
   - '+.taolx.com'
   - '+.taomanhua.com'
   - '+.taomee.com'
@@ -50349,6 +50376,7 @@ payload:
   - '+.tapimg.com'
   - '+.tapotiexie.com'
   - '+.tapque.com'
+  - '+.tapsvc.com'
   - '+.taptap-api.com'
   - '+.taptap.com'
   - '+.taptapcode.com'
@@ -50446,7 +50474,6 @@ payload:
   - '+.tcloudbase.com'
   - '+.tcloudbaseapp.com'
   - '+.tcloudfamily.com'
-  - '+.tcloudlife.com'
   - '+.tcloudscdn.com'
   - '+.tcloudscdn.net'
   - '+.tcm100.com'
@@ -50835,7 +50862,6 @@ payload:
   - '+.thinksrc.com'
   - '+.thinvent.com'
   - '+.thishealthsummit.com'
-  - '+.thisisdongdongqiang.com'
   - '+.thiztech.com'
   - '+.thjunshi.com'
   - '+.thmovie.com'
@@ -52549,6 +52575,7 @@ payload:
   - '+.ubismartparcel.com'
   - '+.ubixai.com'
   - '+.ubja.vip'
+  - '+.ublese.com'
   - '+.ubmconlinereg.com'
   - '+.uboat100.com'
   - '+.ubooo.com'
@@ -53771,7 +53798,6 @@ payload:
   - '+.vrbig.com'
   - '+.vrbrothers.com'
   - '+.vrcfo.com'
-  - '+.vrgame520.com'
   - '+.vrjie.com'
   - '+.vrlequ.com'
   - '+.vrpowder.com'
@@ -55114,6 +55140,7 @@ payload:
   - '+.whbcrs.com'
   - '+.whbear.com'
   - '+.whbester.com'
+  - '+.whbjcs.com'
   - '+.whbjdn.com'
   - '+.whbjyy.com'
   - '+.whbsybj.com'
@@ -56524,6 +56551,7 @@ payload:
   - '+.wxnacy.com'
   - '+.wxngh.com'
   - '+.wxp114.com'
+  - '+.wxp2022.vip'
   - '+.wxphp.com'
   - '+.wxrb.com'
   - '+.wxrrd.com'
@@ -58415,7 +58443,6 @@ payload:
   - '+.xmzsyg.com'
   - '+.xmzylh.com'
   - '+.xn--2krw29cdqai43k.com'
-  - '+.xn--2ss830adjbqy7h.xn--fiqs8s'
   - '+.xn--55qx5d'
   - '+.xn--6rt008ee0k3ua.com'
   - '+.xn--6rt008ee0k3ua.net'
@@ -60290,6 +60317,7 @@ payload:
   - '+.yiweb.com'
   - '+.yiweilaogumin.com'
   - '+.yiwenyida.com'
+  - '+.yiworld.com'
   - '+.yiwubuy.com'
   - '+.yiwufair.com'
   - '+.yiwugo.com'
@@ -61961,6 +61989,7 @@ payload:
   - '+.yydzh.com'
   - '+.yyearth.com'
   - '+.yyedufeb.com'
+  - '+.yyeduox.com'
   - '+.yyes.shop'
   - '+.yyestar.com'
   - '+.yyetss.com'
@@ -62120,6 +62149,7 @@ payload:
   - '+.zahtb.com'
   - '+.zahuibaike.com'
   - '+.zahuishi.com'
+  - '+.zahuoji.com'
   - '+.zai-art.com'
   - '+.zaibei.net'
   - '+.zaiduu.com'
@@ -62531,6 +62561,7 @@ payload:
   - '+.zgny.com'
   - '+.zgong.com'
   - '+.zgpingshu.com'
+  - '+.zgpingxuan.com'
   - '+.zgps168.com'
   - '+.zgpts.com'
   - '+.zgqkk.com'
